--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.8.4"
   },
   "dependencies": {
+    "graph.ql": "^2.0.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   },
