--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "axios": "^0.15.3",
+    "dataloader": "^1.2.0",
     "graph.ql": "^2.0.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
