--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "dataloader": "^1.2.0",
+    "express": "^4.14.0",
     "graph.ql": "^2.0.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
