--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "axios": "^0.15.3",
     "dataloader": "^1.2.0",
     "express": "^4.14.0",
+    "express-graphql": "^0.6.1",
     "graph.ql": "^2.0.1",
+    "graphiql": "^0.8.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   },
