--- a/package.json
+++ b/package.json
@@ -53,8 +53,11 @@
     "express-graphql": "^0.6.1",
     "graph.ql": "^2.0.1",
     "graphiql": "^0.8.1",
+    "object-assign": "^4.1.0",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "remarkable": "^1.7.1",
+    "to-slug-case": "^1.0.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
